--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 I am a Mysorean </p>
 <p> I like <a href="https://www.google.co.in/search?q=lee+min+ho&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjF4vHWtu_UAhWJpY8KHbgCDXEQ_AUICygC&biw=1366&bih=662#imgrc=e5ebVjV3IdL1ZM:"> Lee Min Ho </a>
 <br>
-I love <img src="C:\Users\JM00485444\Downloads\uttharkand.jpg" alt="Korean Dramas" width='102' height='104' >
+I love Korean Dramas
 </p>
 </body>
 </html>
